index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ body {
 }
 </style>
 <body>
-<div id="preloader">
+<!--<div id="preloader">
   <div id="logo-container">
     <svg viewBox="0 0 400 200" preserveAspectRatio="xMidYMid meet">
       <defs>
@@ -89,7 +89,7 @@ body {
       />
     </svg>
   </div>
-</div>
+</div>-->
 
 
 </div>
