--- a/snippets/header.html
+++ b/snippets/header.html
@@ -39,12 +39,13 @@
     }
     
     .capital {
-      font-weight: 600;
+      font-weight: 500;
       }
 
     .logo a {
       font-size: 2em;
       font-weight: 500;
+      color: black;
       line-height: 1;
       letter-spacing: -0.075em;
       white-space: nowrap;
