--- a/snippets/header.html
+++ b/snippets/header.html
@@ -58,6 +58,7 @@
       font-family: "Snell", serif;
       font-style: italic;
       font-size: 2.1em;
+      letter-spacing: -0.03em;
       padding-right: 4px;
     }
 
@@ -166,7 +167,7 @@
     <a href="/studio/"><span class="capital">S</span>tudio</a>
   </div>
 
-  <h1 class="subtitle">digital artist and designer</h1>
+  <!--<h1 class="subtitle">digital artist and designer</h1>-->
 
   <nav>
     <a href="/" class="nav">Web</a>
