index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
                      <div class="info">
                          <h2>Make a wish Webapp (2025)</h2>
                            <p>Page that only allows you to post photos on "magical" time and then shows your gallery of the last 24 hours. No backend all local storage.</p>
-                         <a href="https://mori77z.de/wdw" target="_blank">https://mori77z.de/wdw</a>
+                         <a href="https://mori77z.de/wdw" target="_blank">mori77z.de/wdw</a>
                      </div>
                     
                 <div class="content">
                     
                 <div class="scroll-box">
-                    <div class="iframe-container" data-href="https://moritzgauss.github.io/sanzowada">
+                    <div class="iframe-container" data-href="https://mori77z.de/wdw">
                         <iframe src="https://mori77z.de/wdw"></iframe>
                     </div>
                  </div>
