index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <div class="content">
                     
                 <div class="scroll-box">
-                    <div class="iframe-container" data-href="https://moritzgauss.github.io/sanzowada">
+                    <div class="iframe-container" data-href="https://moritzgauss.github.io/ipodplayer">
                         <iframe src="https://moritzgauss.github.io/ipodplayer" target="_blank">beach.mori77z.de/ipodplayer"></iframe>
                     </div>
                  </div>
