--- a/snippets/footer.html
+++ b/snippets/footer.html
@@ -7,7 +7,7 @@
   padding-top: 60px;
   padding-left: 10px;
   padding-right: 14px;
-  height: 60px;
+  height: auto;
 }
 .last-edited {
   font-size: 0.6em;
