--- a/snippets/header.html
+++ b/snippets/header.html
@@ -39,12 +39,12 @@
     }
     
     .capital {
-      font-weight: 500;
+      font-weight: 600;
       }
 
     .logo a {
       font-size: 2em;
-      font-weight: 500;
+      font-weight: 400;
       color: black;
       line-height: 1;
       letter-spacing: -0.075em;
@@ -60,16 +60,6 @@
       font-size: 2.1em;
       letter-spacing: -0.03em;
       padding-right: 4px;
-    }
-
-    .subtitle {
-      font-size: 0.8em;
-      font-weight: 400;
-      letter-spacing: -0.02em;
-      color: black;
-      margin-top: -6px;
-      margin-bottom: 0;
-      text-align: left;
     }
 
     nav {
@@ -136,7 +126,7 @@
       }
     }
 
-    /* @media (prefers-color-scheme: dark) {
+    @media (prefers-color-scheme: dark) {
 
       .header-container {
         background-color: rgba(0, 0, 0, 0.1);
@@ -158,7 +148,7 @@
 
       nav a {
         color: white;
-      }*/
+      }
     
   </style>
 
@@ -166,8 +156,6 @@
     <a class="moritz" href="/about"><span class="capital">M</span>oritz Gauss</a>
     <a href="/studio/"><span class="capital">S</span>tudio</a>
   </div>
-
-  <!--<h1 class="subtitle">digital artist and designer</h1>-->
 
   <nav>
     <a href="/" class="nav">Web</a>
