--- a/snippets/footer.html
+++ b/snippets/footer.html
@@ -2,12 +2,10 @@
 
 .custom-footer {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
+  gap: 20px;
   align-items: baseline;
-  padding-top: 60px;
-  padding-left: 10px;
-  padding-right: 14px;
-  height: auto;
+  padding-left: 60px 10px 40px 20px;
 }
 .last-edited {
   font-size: 0.6em;
@@ -37,12 +35,12 @@
   }
 }
 
-/* @media (prefers-color-scheme: dark) {
+ @media (prefers-color-scheme: dark) {
 
   .custom-footer a {
     color: #fff;
   }
-} */
+}
 
 </style>
 <footer class="custom-footer">
