--- a/snippets/footer.html
+++ b/snippets/footer.html
@@ -5,7 +5,7 @@
   justify-content: flex-start;
   gap: 20px;
   align-items: baseline;
-  padding-left: 60px 10px 40px 20px;
+  padding: 60px 10px 40px 20px;
 }
 .last-edited {
   font-size: 0.6em;
