--- a/index.html
+++ b/index.html
@@ -437,13 +437,13 @@
 
                      <div class="info">
                          <h2>Linktree Konzept (2024)</h2>
-                         <a href="https://fc4022.github.io/linktree" target="_blank">fc4022.github.io/linktree</a>
+                         <a href="https://moritzgauss.github.io/links.wave" target="_blank">moritzgauss.github.io/links</a>
                      </div>
                 
                 <div class="content">
                     <div class="scroll-box">
-                     <div class="iframe-container" data-href="fc4022.github.io/linktree">
-                         <iframe src="https://fc4022.github.io/linktree"></iframe>
+                     <div class="iframe-container" data-href="https://moritzgauss.github.io/links.wave">
+                         <iframe src="https://moritzgauss.github.io/links.wave"></iframe>
                      </div>
                  </div>
                    <div class="scroll-box">
