--- a/snippets/header.html
+++ b/snippets/header.html
@@ -154,7 +154,7 @@
 
   <div class="logo">
     <a class="moritz" href="/about"><span class="capital">M</span>oritz Gauss</a>
-    <a href="/studio/"><span class="capital">S</span>tudio</a>
+    <a href="/studio/">Studio</a>
   </div>
 
   <nav>
