--- a/snippets/header.html
+++ b/snippets/header.html
@@ -5,7 +5,8 @@
       display: flex;
       flex-direction: column;
       align-items: flex-start;
-      padding: 10px;
+      padding-left: 10px;
+      padding-right: 14px;
       gap: 10px;
       position: fixed;
       top: 0;
@@ -99,7 +100,8 @@
 
     @media (min-width: 768px) {
       .header-container {
-        padding: 20px;
+        padding-left: 20px;
+        padding-right: 30px;
       }
       .logo a {
         font-size: 3em;
