--- a/snippets/footer.html
+++ b/snippets/footer.html
@@ -7,6 +7,8 @@
   align-items: baseline;
   padding-left: 10px;
   padding-right: 20px;
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
 
 .last-edited {
@@ -33,6 +35,8 @@
     font-size: 1.2em;
     padding-left: 20px;
     padding-right: 30px;
+    padding-top: 60px;
+    padding-bottom: 60px;
     height: 100px;
   }
 }
