--- a/snippets/header.html
+++ b/snippets/header.html
@@ -5,8 +5,7 @@
       display: flex;
       flex-direction: column;
       align-items: flex-start;
-      padding-left: 10px;
-      padding-right: 14px;
+      padding: 10px 10px 10px 14px;
       gap: 10px;
       position: fixed;
       top: 0;
@@ -100,8 +99,7 @@
 
     @media (min-width: 768px) {
       .header-container {
-        padding-left: 20px;
-        padding-right: 30px;
+        padding: 20px 20px 20px 30px;
       }
       .logo a {
         font-size: 3em;
