--- a/snippets/header.html
+++ b/snippets/header.html
@@ -110,6 +110,15 @@
       .logo-image img {
         height: 48px;
       }
+      nav {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        width: 100%;
+        margin-top: 20px;
+        margin-bottom: 10px;
+        gap: 10px;
+}
       nav a {
         font-size: 1.2em;
       }
