--- a/snippets/header.html
+++ b/snippets/header.html
@@ -52,6 +52,7 @@
       box-sizing: border-box; 
       text-decoration: none;
       cursor: pointer;
+      mix-blend-mode: difference;
     }
 
     .logo a:hover {
@@ -77,7 +78,7 @@
       letter-spacing: -0.03em;
       text-decoration: underline;
       color: black;
-      cursor: pointer;
+      mix-blend-mode: difference;
     }
 
     nav a:hover {
@@ -100,6 +101,9 @@
     @media (min-width: 768px) {
       .header-container {
         padding: 20px 30px 20px 20px;
+        background-color: transparent;
+        backdrop-filter: none;
+        -webkit-backdrop-filter: none;
       }
       .logo a {
         font-size: 3em;
