--- a/snippets/header.html
+++ b/snippets/header.html
@@ -161,6 +161,13 @@
       nav a {
         color: white;
       }
+      }
+      
+      @media (prefers-color-scheme: dark) and (min-width: 768px) {
+  .header-container {
+    background-color: transparent;
+  }
+}
     
   </style>
 
