--- a/snippets/header.html
+++ b/snippets/header.html
@@ -119,6 +119,14 @@
         margin-top: 20px;
         margin-bottom: 10px;
         gap: 10px;
+        transition: transform 0.3s ease, opacity 0.3s ease;
+        will-change: transform, opacity;
+}
+
+.nav.shrink {
+  transform: translateY(-100%);
+  opacity: 0;
+  pointer-events: none;
 }
       nav a {
         font-size: 2em;
