--- a/snippets/header.html
+++ b/snippets/header.html
@@ -123,7 +123,7 @@
         will-change: transform, opacity;
 }
 
-.nav.shrink {
+nav.shrink {
   transform: translateY(-100%);
   opacity: 0;
   pointer-events: none;
