--- a/snippets/header.html
+++ b/snippets/header.html
@@ -64,6 +64,7 @@
     nav {
       display: flex;
       width: 100%;
+      height: auto;
       justify-content: space-between;
       align-items: flex-start;
       margin-top: 20px;
