--- a/snippets/header.html
+++ b/snippets/header.html
@@ -178,7 +178,7 @@ nav.shrink {
 
   <div class="logo">
     <a class="moritz" href="/about"><span class="capital">M</span>oritz Gauss</a>
-   <!-- <a href="/studio/">Studio</a>-->
+    <a href="/studio/">Studio</a>
   </div>
 
   <nav>
