index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
                      <div class="info">
                          <h2>Online Calender Design (2025)</h2>
-                        <p>Created in p5.js and developed in Code Editor, updates automatically and runs 4ever.
+                        <p>Created in p5.js and developed in processing, updates automatically and runs 4ever.
                          <a href="https://moritzgauss.github.io/daily.wave" target="_blank">beach.mori77z.de/daily.wave</a><br>
                      </div>
                     
