--- a/snippets/header.html
+++ b/snippets/header.html
@@ -42,25 +42,37 @@
       font-weight: 600;
       }
       
-    .underline-dotted::after {
-      content: "";
-      position: absolute;
-      left: 0;
-      bottom: 0.1em;
-      width: 100%;
-      height: 5px;
-      background-image: repeating-radial-gradient(
-        circle,
-        red 0px,
-        red 2px,
-        transparent 2px,
-        transparent 4px
-      );
-      background-repeat: repeat-x;
-      background-size: 6px 6px;
-      background-position: 0 50%;
-      pointer-events: none;
-    }
+.underline-wrapper {
+  position: relative;
+  display: inline-block;
+  line-height: 1;
+}
+
+.underline-dotted {
+  position: relative;
+  z-index: 1;
+}
+
+.underline-dotted::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0.1em;
+  width: 100%;
+  height: 5px;
+  background-image: repeating-radial-gradient(
+    circle,
+    red 0px,
+    red 2px,
+    transparent 2px,
+    transparent 4px
+  );
+  background-repeat: repeat-x;
+  background-size: 6px 6px;
+  background-position: 0 50%;
+  pointer-events: none;
+  z-index: -1;
+}
 
     .logo a {
       font-size: 2em;
@@ -197,7 +209,7 @@ nav.shrink {
   </style>
 
   <div class="logo">
-    <a class="moritz" href="/about"><span class="capital">M</span>oritz <span class="underline-dotted">Gauss</span></a>
+    <a class="moritz" href="/about"><span class="capital">M</span>oritz <span class="underline-wrapper"><span class="underline-dotted">Gauss</span></span></a>
     <a href="/studio/">Studio</a>
   </div>
 
