--- a/snippets/header.html
+++ b/snippets/header.html
@@ -57,19 +57,19 @@
   content: "";
   position: absolute;
   left: 0;
-  bottom: 0.1em;
+  bottom: 0.05em;
   width: 100%;
-  height: 5px;
+  height: 4px;
   background-image: repeating-radial-gradient(
     circle,
     red 0px,
-    red 2px,
-    transparent 2px,
-    transparent 3px
+    red 1.6px,
+    transparent 1.6px,
+    transparent 4px
   );
   background-repeat: repeat-x;
-  background-size: 6px 6px;
-  background-position: 0 50%;
+  background-size: 4px 4px;
+  background-position: left bottom;
   pointer-events: none;
   z-index: 2;
 }
