--- a/snippets/header.html
+++ b/snippets/header.html
@@ -52,23 +52,33 @@
   position: relative;
   z-index: 1;
 }
-
+.underline-wrapper::before {
+  content: "";
+  position: absolute;
+  right: -1px;
+  bottom: 0.05em;
+  width: 5px;
+  height: 5px;
+  background-color: red;
+  border-radius: 50%;
+  z-index: 2;
+}
 .underline-dotted::after {
   content: "";
   position: absolute;
   left: 0;
   bottom: 0.05em;
   width: 100%;
-  height: 4px;
+  height: 5px;
   background-image: repeating-radial-gradient(
     circle,
     red 0px,
-    red 1.6px,
-    transparent 1.6px,
-    transparent 4px
+    red 2px,
+    transparent 2px,
+    transparent 5px
   );
   background-repeat: repeat-x;
-  background-size: 4px 4px;
+  background-size: 5px 5px;
   background-position: left bottom;
   pointer-events: none;
   z-index: 2;
