header.html aktualisieren

--- a/snippets/header.html
+++ b/snippets/header.html
@@ -203,7 +203,7 @@ nav.shrink {
   </style>
 
   <div class="logo">
-    <a class="moritz" href="/about"><span class="capital">M</span>oritz <span class="underline-wrapper"><span class="underline-dotted">Gauss</span></span></a>
+    <a class="moritz" href="/about"><span class="capital">M</span>oritz <span class="underline-dotted">Gauss</span></span></a>
     <a href="/studio/">Studio</a>
   </div>
 
