--- a/snippets/header.html
+++ b/snippets/header.html
@@ -50,7 +50,9 @@
 .underline-dotted::after {
   content: "";
   position: absolute;
-  left: 0;
+ left: 4px; 
+  bottom: 2px;
+  width: calc(100% - 4px); 
   bottom: 2px;
   width: 100%;
   height: 5px;
