header.html aktualisieren

--- a/snippets/header.html
+++ b/snippets/header.html
@@ -205,8 +205,8 @@ nav.shrink {
   </style>
 
   <div class="logo">
-    <a class="moritz" href="/about"><span class="capital">M</span>oritz <span class="underline-dotted">Gauss</span></span></a>
-    <a href="/studio/">Studio</a>
+    <a class="moritz" href="/about"><span class="capital">M</span>oritz Gauss</a>
+    <a class="underline-dotted" href="/studio/">Studio</a>
   </div>
 
   <nav>
