header.html aktualisieren

--- a/snippets/header.html
+++ b/snippets/header.html
@@ -203,7 +203,7 @@ nav.shrink {
 
   <div class="logo">
     <a class="moritz" href="/about"><span class="capital">M</span>oritz Gauss</a>
-    <a class="underline-dotted" href="/studio/">Studio</a>
+    <a class="underline-dotted" href="/studio/">Stdio</a>
   </div>
 
   <nav>
