--- a/snippets/header.html
+++ b/snippets/header.html
@@ -51,7 +51,7 @@
   content: "";
   position: absolute;
   left: 0;
-  bottom: 1px;
+  bottom: 0;
   width: 100%;
   height: 5px;
   background-image: repeating-radial-gradient(
