--- a/snippets/header.html
+++ b/snippets/header.html
@@ -71,33 +71,45 @@
 
 .cursor {
   display: inline-block;
-  min-width: 2px;
-  width: 3px;
+  width: 2px;
   height: 1em;
   background-color: grey;
   margin-left: 3px;
-  animation: blink 1s steps(2, start) infinite;
+  border-radius: 1px;
+  animation: blink 0.8s ease-in-out infinite;
   vertical-align: bottom;
 }
 
-.stdio-link:hover .cursor,
-.stdio-link:active .cursor {
-  display: none;
+@keyframes blink {
+  0%, 100% {
+    opacity: 1;
+  }
+  40%, 60% {
+    opacity: 0;
+  }
+}
+
+.stdio-link {
+  white-space: nowrap;
+}
+
+.label::after {
+  content: "u";
+  opacity: 0;
+  visibility: hidden;
+  display: inline;
+  transition: opacity 0.3s ease;
+  letter-spacing: -0.08em;
 }
 
 .stdio-link:hover .label::after,
 .stdio-link:active .label::after {
-  content: "u";
-  letter-spacing: -0.08em;
+  opacity: 1;
+  visibility: visible;
 }
 
 .label::after {
   transition: opacity 0.3s ease;
-}
-
-@keyframes blink {
-  0%, 100% { opacity: 1; }
-  50% { opacity: 0; }
 }
 
     .logo a {
