header.html aktualisieren

--- a/snippets/header.html
+++ b/snippets/header.html
@@ -87,12 +87,12 @@
 .cursor {
   display: inline-block;
   width: 2px;
-  height: 1em;
+  height: 0.9em;
   background-color: grey;
   margin-left: 3px;
   border-radius: 1px;
   animation: blink 0.8s ease-in-out infinite;
-  vertical-align: bottom;
+  transform: translateY(10%);
 }
 
 .stdio-link:hover .cursor,
