footer.html aktualisieren

--- a/snippets/footer.html
+++ b/snippets/footer.html
@@ -25,7 +25,6 @@
 }
 
 .custom-footer a:hover {
-  font-family: "Snell", serif;
   font-style: italic;
   padding-right: 3px;
 }
@@ -49,7 +48,6 @@
 
 </style>
 <footer class="custom-footer">
-  <div id="last-edited" class="last-edited">Last Updated: <span id="last-edited-date"></span></div>
-  <a href="/about">About</a>
-  <a href="/about/imprint">Imprint</a>
+  <a href="mailto:email@moritzgauss.com">Email me</a>
+  <p>All rights reserved.</p>
 </footer>
