header.html aktualisieren

--- a/snippets/header.html
+++ b/snippets/header.html
@@ -121,7 +121,7 @@
 
   <nav>
     <a href="/projects" class="nav">Projects</a>
-    <a href="/studio" class="nav">Studio</a>
-    <a href="/about" class="nav">About</a>
+    <a href="/questionmark" class="nav">?</a>
+    <a href="/contact" class="nav">Contact</a>
   </nav>
 </header>
