--- a/index.html
+++ b/index.html
@@ -22,16 +22,17 @@
 </head>
 <body>
 
-        <div class="main-container">
+        <main>
 <h4 id="text-content">
-     <span class="bold-h5">Remember When Web Was Swag?</span>I create authentic webpages that truly represent you. 
-    I have worked with artists from various creative fields and businesses from all over Europe. 
-    With my experience in coding and web development there's nothing we can't make happen on your page or application. I also know webflow, framer, wix, wordpress,...
-    <br>Ready to rethink your online presence? Let’s make it <span class="bold-h3">bold</span>!
+    I<br>
+    ...create webpages, visuals and objects. <br>
+    ...have worked with creative professionals, businesses and friends from all over all over Europe. <br>
+    ...do web development, webdesign, ui/ux and i got a BA in Industrial Design. I know webflow, framer, wix, wordpress,...<br>
+    <br>On this site you find ways to get in contact or shedule a call. Also theres an overview of projects and clientworks.<br>
+    Thank you for visiting!
 </h4>
-
+        </main>
          <script src="/assets/global.js"></script>
-         <script src="/material/favicon.js"></script>   
      </body>
      </html>
      
