footer.html aktualisieren

--- a/snippets/footer.html
+++ b/snippets/footer.html
@@ -2,7 +2,7 @@
 
 .custom-footer {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   gap: 20px;
   align-items: baseline;
   padding-left: 10px;
@@ -37,4 +37,5 @@
 </style>
 <footer class="custom-footer">
   <a href="mailto:email@moritzgauss.com">Email me</a>
+  <a href="/imprint">Imprint </a> 
 </footer>
