index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -23,16 +23,12 @@
 <body>
 
         <main>
-<h4 id="text-content">
-    I<br>
-    ...create webpages, visuals and objects. <br>
-    ...have worked with creative professionals, businesses and friends from all over all over Europe. <br>
-    ...do web development, webdesign, ui/ux and i got a BA in Industrial Design. I know webflow, framer, wix, wordpress,...<br>
-    <br>On this site you find ways to get in contact or shedule a call. Also theres an overview of projects and clientworks.<br>
-    Thank you for visiting!
-</h4>
+<h1>✹❦♬♪♩★❥✱♫♞✹❦♬♪♩★❥✱♫♞<h1>
+<h2>
+I work with businesses and individuals across art, music, and fashion to create visual, interactive, and physical design.
+</h2>
+<h1>✹❦♬♪♩★❥✱♫♞✹❦♬♪♩★❥✱♫♞<h1>
         </main>
          <script src="/assets/global.js"></script>
      </body>
      </html>
-     
