header.html aktualisieren

--- a/snippets/header.html
+++ b/snippets/header.html
@@ -120,8 +120,9 @@
   </div>
 
   <nav>
+    <a href="/info" class="nav">Info</a>
     <a href="/projects" class="nav">Projects</a>
-    <a href="/questionmark" class="nav">?</a>
+    <a href="/services" class="nav">Services</a>
     <a href="/contact" class="nav">Contact</a>
   </nav>
 </header>
