index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -23,11 +23,9 @@
 <body>
 
         <main>
-<h1>✹❦♬♪♩★❥✱♫♞✹❦♬♪♩★❥✱♫♞<h1>
-<h2>
+<h1 class="opener-text">
 I work with businesses and individuals across art, music, and fashion to create visual, interactive, and physical design.
-</h2>
-<h1>✹❦♬♪♩★❥✱♫♞✹❦♬♪♩★❥✱♫♞<h1>
+</h1>
         </main>
          <script src="/assets/global.js"></script>
      </body>
