header.html aktualisieren

--- a/snippets/header.html
+++ b/snippets/header.html
@@ -123,7 +123,7 @@
   </div>
 
   <nav>
-    <a href="/info" class="nav">Info</a>
+    <a href="/" class="nav">Info</a>
     <a href="/projects" class="nav">Projects</a>
     <a href="/services" class="nav">Services</a>
     <a href="/contact" class="nav">Contact</a>
