header.html aktualisieren

--- a/snippets/header.html
+++ b/snippets/header.html
@@ -70,6 +70,7 @@ nav a {
   letter-spacing: -0.03em;
   text-decoration: underline;
   color: black;
+  padding-right: 4px;
   display: inline-block;
   transition: transform 0.3s ease, font-style 0.3s ease;
 }
