--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 <body>
 
         <main>
-<h1 class="opener-text">
-I work with businesses and individuals across art, music, and fashion to create visual, interactive, and physical design.
-</h1>
+<h3 class="opener-text">
+I collaborate with clients across art, music, and fashion to design visual, interactive, and physical projects.
+</h3>
         </main>
          <script src="/assets/global.js"></script>
      </body>
