header.html aktualisieren

--- a/snippets/header.html
+++ b/snippets/header.html
@@ -39,11 +39,11 @@
       }
       
     .logo a {
-      font-size: 2em;
+      font-size: 3rem;
       font-weight: 400;
       color: black;
       line-height: 1;
-      letter-spacing: -0.08em;
+      letter-spacing: -0.08rem;
       white-space: nowrap;
       box-sizing: border-box; 
       text-decoration: none;
@@ -65,9 +65,9 @@ nav {
 }
 
 nav a {
-  font-size: 1.2em;
+  font-size: 1.2rem;
   line-height: 1.1;
-  letter-spacing: -0.03em;
+  letter-spacing: -0.03rem;
   text-decoration: underline;
   color: black;
   padding-right: 4px;
