index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
 
-        <main>
+        <main id="page-wrapper">
 <h3 class="opener-text">
 I collaborate with clients across art, music, and fashion to design visual, interactive, and physical projects.
 </h3>
