footer.html aktualisieren

--- a/snippets/footer.html
+++ b/snippets/footer.html
@@ -4,10 +4,12 @@
   justify-content: space-between;
   gap: 20px;
   align-items: baseline;
+  flex-shrink: 0;
   padding-left: 10px;
-  padding-right: 20px;
+  padding-right: 10px;
   padding-top: 40px;
   padding-bottom: 40px;
+}
 }
   
 .custom-footer a,
