--- a/snippets/footer.html
+++ b/snippets/footer.html
@@ -32,6 +32,7 @@
 
 .custom-footer details {
   max-width: 800px;
+  margin-top: 40px;
   -webkit-appearance: none;
   appearance: none;
 }
@@ -73,7 +74,7 @@
 </style>
 
 <footer class="custom-footer">
-  <a href="mailto:email@moritzgauss.com">Email me</a>
+  <a class="confirm-link" href="mailto:email@moritzgauss.com">Email me</a>
   
   <details>
     <summary>Imprint</summary>
