footer.html aktualisieren

--- a/snippets/footer.html
+++ b/snippets/footer.html
@@ -50,9 +50,14 @@
 }
 
 .custom-footer details p {
-  margin: 0 0 10px 0;
   font-size: 0.9rem;
   line-height: 1.2;
+}
+
+.custom-footer details a {
+  font-size: 0.9rem;
+  line-height: 1.2;
+  color: inherit;
 }
 
 .custom-footer details h4 {
