footer.html aktualisieren

--- a/snippets/footer.html
+++ b/snippets/footer.html
@@ -61,9 +61,7 @@
 }
 
 .custom-footer details h4 {
-  margin: 15px 0 5px 0;
-  font-size: 0.9rem;
-  text-decoration: underline;
+  font-weight: 400;
 }
 
 @media (min-width: 768px) {
