header.html aktualisieren

--- a/snippets/header.html
+++ b/snippets/header.html
@@ -69,8 +69,9 @@ nav a {
   line-height: 1.1;
   letter-spacing: -0.03rem;
   text-decoration: underline;
-  color: black;
-  padding-right: 4px;
+  color: white;
+  background-color: black;
+  padding: 6px;
   display: inline-block;
   transition: transform 0.3s ease, font-style 0.3s ease;
 }
