index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <main>
 <h3 class="opener-text">
-I collaborate with clients across art, music and fashion to design visual, interactive and physical projects.
+I collaborate with clients to design visual, interactive and physical projects.
 </h3>
         </main>
          <script src="/assets/global.js"></script>
