--- a/index.html
+++ b/index.html
@@ -28,5 +28,62 @@ I collaborate with clients to design visual, interactive and physical projects.
 </h3>
         </main>
          <script src="/assets/global.js"></script>
+ <script>
+document.addEventListener("DOMContentLoaded", () => {
+  const images = [
+    "/material/IMG_1928.jpeg",
+    "/material/IMG_1938.jpeg",
+    "/material/IMG_1945.jpeg",
+    "/material/IMG_2214.jpeg",
+    "/material/IMG_2220.jpeg",
+    "/material/IMG_2232.jpeg",
+    "/material/IMG_2240.jpeg",
+    "/material/IMG_2267.jpeg",
+    "/material/IMG_2271.jpeg",
+    "/material/IMG_2277.jpeg",
+    "/material/IMG_3203.jpeg",
+    "/material/IMG_3204.jpeg",
+    "/material/anguilla1-copyright-moritzgauss.JPG",
+    "/material/anguilla2-copyright-moritzgauss.JPG",
+    "/material/anguilla3-copyright-moritzgauss.JPG",
+    "/material/anguilla4-copyright-moritzgauss.JPG",
+    "/material/anguilla5-copyright-moritzgauss.JPG",
+    "/material/anguilla6-copyright-moritzgauss.JPG",
+    "/material/anguilla7-copyright-moritzgauss.JPG",
+    "/material/anguilla8-copyright-moritzgauss.JPG",
+    "/material/anguilla9-copyright-moritzgauss.JPG",
+    "/material/anguilla10-copyright-moritzgauss.JPG",
+    "/material/anguilla11-copyright-moritzgauss.JPG",
+    "/material/anguilla12-copyright-moritzgauss.JPG"
+  ];
+
+  let loaded = false;
+  let preloaded = [];
+  let index = 0;
+
+  function preloadImages() {
+    images.forEach(src => {
+      const img = new Image();
+      img.src = src;
+      preloaded.push(img);
+    });
+    loaded = true;
+    console.log("Alle Bilder vorgeladen.");
+  }
+
+  function nextBackground() {
+    if (!loaded) preloadImages();
+
+    index = (index + 1) % images.length;
+    document.body.style.backgroundImage = `url('${images[index]}')`;
+    document.body.style.backgroundSize = "cover";
+    document.body.style.backgroundPosition = "center";
+  }
+
+  document.body.addEventListener("mousedown", nextBackground);
+  document.body.addEventListener("touchstart", nextBackground);
+});
+</script>
+
      </body>
      </html>
